<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent" android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/life_line"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp">

         <TextView
             android:id="@+id/life_line_text"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
             android:text="@string/life_line_title"
             android:textSize="16sp"
             android:paddingLeft="30dp"/>

        <Spinner
            android:id="@+id/life_spinner"
            android:layout_width="100dp"
            android:layout_marginLeft="150dp"
            android:layout_height="30dp"/>

        <Switch
            android:id="@+id/life_switch"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/spouse_line"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/spouse_line_title"
            android:textSize="16sp"
            android:paddingLeft="30dp"/>


        <Spinner
            android:id="@+id/spouse_spinner"
            android:layout_width="100dp"
            android:layout_marginLeft="150dp"
            android:layout_height="30dp"/>

        <Switch
            android:id="@+id/spouse_switch"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/family_line"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/family_line_title"
            android:textSize="16sp"
            android:paddingLeft="30dp"/>

        <Spinner
            android:id="@+id/family_spinner"
            android:layout_width="100dp"
            android:layout_marginLeft="150dp"
            android:layout_height="30dp"/>

        <Switch
            android:id="@+id/family_switch"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/settings_map"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/map_type"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingLeft="30dp"/>

        <Spinner
            android:id="@+id/map_spinner"
            android:layout_width="100dp"
            android:layout_marginLeft="150dp"
            android:layout_height="30dp"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/settings_resync"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resync_title"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingLeft="30dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout
        android:id="@+id/settings_logout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_title"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:paddingLeft="30dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>